Fix word wrap

--- a/_sass/_site.scss
+++ b/_sass/_site.scss
@@ -763,6 +763,7 @@ blockquote {
 .contact-right-section a {
   color: #616161;
   font-weight: bold;
+  overflow-wrap: break-word;
 }
 
 /*--------------
